# model2regex

./: .gitattributes  .gitignore  Dockerfile  Masterarbeit-Prep.ipynb  README.md  main.py  pyproject.toml  results.db  results.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
Prototype/: .gitattributes  Classifier.ipynb  Masterarbeit-Prep.ipynb  dga.py  model-fold-0  model-fold-1  model-fold-2  requirements.txt
Prototype/data/: top-1m.csv
Prototype/runs/Classifier-prototype-fold-0/: events.out.tfevents.1712252385.DESKTOP-U4D1D77.24680.0  events.out.tfevents.1712252410.DESKTOP-U4D1D77.24680.1
Prototype/runs/Classifier-prototype-fold-1/: events.out.tfevents.1712253025.DESKTOP-U4D1D77.24680.2
Prototype/runs/Classifier-prototype-fold-2/: events.out.tfevents.1712253644.DESKTOP-U4D1D77.24680.3
Prototype/runs/Embedding-Classifier-model-0/: events.out.tfevents.1712254268.DESKTOP-U4D1D77.24680.4  events.out.tfevents.1712262510.DESKTOP-U4D1D77.24680.5
Prototype/runs/Embedding-Classifier-model-0/00000/default/: metadata.tsv  tensors.tsv
Prototype/runs/Embedding-Classifier-model-1/: events.out.tfevents.1712265981.DESKTOP-U4D1D77.24680.19  projector_config.pbtxt
Prototype/runs/Embedding-Classifier-model-1/00000/default/: metadata.tsv  tensors.tsv
datasets/: simple.txt
domain_gen/: __init__.py  __main__.py  generate_domain.py
expose/: Makefile  bibliography.bib  expose.dvi  expose.tex
model2regex/: __init__.py  __main__.py  dga.py  dga_test.py  model.py  model_test.py  pyproject.toml  regex.py  regex_test.py  train_test.py  trainer.py
models/: model-fold-1.pth  model-fold-2.pth  model-fold-3.pth  model-fold-4.pth  model-fold-5.pth
models_lm/: model-fold-1.pth
test/: test_simple_nodes_depth_four_middle.gml  test_simple_nodes_depth_three.gml  test_simple_nodes_three_children_depth_two.gml  test_simple_nodes_three_children_depth_two_inverted.gml  test_simple_nodes_two_children.gml
