[tool.poetry]
name = "model2regex"
version = "0.1.0"
description = "Package for generating RegExes from a language model"
authors = ["Eric Schneider <eric.schneider@campus.tu-berlin.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.3.0+cu121", source = "torch-cu121"}
torchvision = {version = "^0.18.0+cu121", source = "torch-cu121"}
torchaudio = {version = "^2.3.0+cu121", source = "torch-cu121"}
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
tensorboard = "^2.16.2"
matplotlib = "^3.9.0"
pycairo = "^1.26.0"
networkx = "^3.3"
pydot = "^2.0.0"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
pyreadline3 = "^3.4.1"

[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.basedpyright]
include = ["model2regex"]

pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
